--- a/index.html
+++ b/index.html
@@ -18,33 +18,38 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-        <section class="card">
-            <header class="card--head"></header>
-            <div class="card--body">
-                <h2>Order Summary</h2>
-                <p>
-                    You can now listen to millions of songs, audiobooks, and
-                    podcast on any device anywhere you like!
-                </p>
-                <div class="plan">
-                    <img class="icon" src="images/icon-music.svg" alt="" />
-                    <div class="plan__price">
-                        <h3>Annual Plan</h3>
-                        $99.99/year
+        <main>
+            <section class="card">
+                <header class="card--head"></header>
+                <div class="card--body">
+                    <h2>Order Summary</h2>
+                    <p>
+                        You can now listen to millions of songs, audiobooks, and
+                        podcast on any device anywhere you like!
+                    </p>
+                    <div class="plan">
+                        <img class="icon" src="images/icon-music.svg" alt="" />
+                        <div class="plan__price">
+                            <h3>Annual Plan</h3>
+                            $99.99/year
+                        </div>
+                        <a href="#">change</a>
                     </div>
-                    <a href="#">change</a>
+                    <button class="btn btn--primary">Proceed to Payment</button>
+                    <button class="btn cancel">Cancel Order</button>
                 </div>
-                <button class="btn btn--primary">Proceed to Payment</button>
-                <button class="btn cancel">Cancel Order</button>
+            </section>
+        </main>
+        <footer>
+            <div class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by
+                <a href="https://www.glitchart13.com">Celumusa Duma</a>.
             </div>
-        </section>
-        <div class="attribution">
-            Challenge by
-            <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-            >. Coded by <a href="https://www.glitchart13.com">Celumusa Duma</a>.
-        </div>
+        </footer>
     </body>
 </html>
